--- a/index.css
+++ b/index.css
@@ -48,3 +48,14 @@ height: 10%;
 width: 10%;
 box-shadow: 20px -20px 60px greenyellow;
     border: 2px solid white;}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: blue;
+}
+a:hover {
+  color: red;
+}
