--- a/index.css
+++ b/index.css
@@ -49,6 +49,8 @@ width: 10%;
 box-shadow: 20px -20px 60px greenyellow;
     border: 2px solid white;}
 
+a:link {
+    color: white;
 
 a:visited {
   color: blue;
